# RustRayTracer

./: .gitignore  Cargo.toml  README.md  justfile
geometry/: Cargo.toml
geometry/src/: aabb.rs  bounds.rs  hittable.rs  instance.rs  lib.rs  mesh.rs  parent.rs  sphere.rs  transpose.rs  tri.rs
gltf/: Cargo.toml
gltf/src/: accessor.rs  gltf.rs  lib.rs
material/: Cargo.toml
material/src/: dielectric.rs  emissive.rs  lambertian.rs  lib.rs  material_trait.rs  texture.rs
objs/F16/: F-16.glb
objs/Titanic/: combined.glb
parser/: Cargo.toml
parser/src/: gltf_parser.rs  lib.rs  mtl_parser.rs  obj_parser.rs
parser/src/glb/: glb_parser.rs  mod.rs
raytracer/: Cargo.toml
raytracer/src/: camera.rs  main.rs  progress.rs
src/: aabb.rs  bounds.rs  camera.rs  hittable.rs  main.rs  mesh.rs  obj_parser.rs  ray.rs  sphere.rs  tri.rs  vec3.rs
src/geometry/: aabb.rs  bounds.rs  hittable.rs  instance.rs  mesh.rs  mod.rs  sphere.rs  tri.rs
src/material/: dielectric.rs  emissive.rs  lambertian.rs  material_trait.rs  mod.rs  texture.rs
src/objs/Chess/: Chess.mtl
src/util/: hit_result.rs  interval.rs  mod.rs  progress.rs  quat.rs  ray.rs  vec3.rs
src/util/parser/: mtl_parser.rs  obj_parser.rs
src/util/parser/glb/: accessor.rs  glb_parser.rs  gltf.rs  mod.rs  types.rs
util/: Cargo.toml
util/src/: hit_result.rs  lib.rs  quat.rs  ray.rs  vec3.rs
