[package]
name = "rs-raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
indicatif = { version = "0.18.4", features = ["rayon"] }
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[features]
default = ["multithreading"]
multithreading = []

[profile.release]
debug = true
strip = false
