[package]
name = "raytracer"
version = "1.0.0"
edition = "2024"

[dependencies]
geometry = { path = "../geometry" }
material = { path = "../material" }
parser = { path = "../parser" }
util = { path = "../util" }

image = "0.25.10"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = { version = "0.18.4", features = ["rayon"] }
rayon = "1.12.0"


[features]
default = ["multithreading"]
multithreading = []